--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,15 @@ body {
 background:#f2f2f2;
 }
 
+a {
+	text-decoration: none;
+	color: #4d4d4d;
+}
+
+a:hover {
+	color: #b3b3b3;
+}
+
 span {
 font-family: 'PT Sans', sans-serif;
 color: #a6a6a6;
