--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,9 @@ h2{
 	font-size: 1.17em;
 }
 
+img {
+	max-width: 100%;
+}
 .contact-info h3{
 	font-family: 'Open Sans', sans-serif;
   font-weight: bolder;
@@ -108,4 +111,22 @@ color:#808080;
 	padding-bottom: 10px;
 	margin-top: 11px;
 	background-color: #f8f8f8;
+}
+
+/* =================================
+  BANNER
+==================================== */
+
+.banner {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	padding: 2em 1em;
+}
+.banner span {
+	padding-top: 30px;
+}
+.banner img {
+ padding-left: 2.6em;
+ width: calc(100% - 2.6em);
 }
