--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ h4 {
 
 h3{
   font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   color: #4d4d4d;
 }
 
@@ -57,12 +57,14 @@ li{
 
 .main-content,
 h2{
-	font-size: 1.17em;
+	font-size: 16px;
 }
 
 img {
-	max-width: 100%;
+width: 100%;
 }
+
+
 .contact-info h3{
 	font-family: 'Open Sans', sans-serif;
   font-weight: bolder;
@@ -80,7 +82,7 @@ img {
 }
 
 .value {
-font-weight: 700;
+font-weight: 600;
 color:#808080;
 }
 
@@ -102,9 +104,7 @@ color:#808080;
 .main-header h1 {
 	margin-bottom: 0.5em;
 }
-.nav ul {
-	background-color: green;
-}
+
 .nav li {
 	width: 310px;
 	padding-top: 10px;
@@ -127,6 +127,84 @@ color:#808080;
 	padding-top: 30px;
 }
 .banner img {
- padding-left: 2.6em;
- width: calc(100% - 2.6em);
+ padding-left: 1.8em;
+ padding-right: 1.8em;
+
+}
+
+/* =================================
+  MAIN CONTENT
+==================================== */
+
+.main-content {
+	background-color: #ffffff;
+	text-align: center;
+	padding-bottom: 50px;
+	padding-top: 20px;
+}
+
+.main-content img {
+	padding-left: 1em;
+	padding-right: 1em;
+	padding-bottom: 0.8em;
+}
+
+.main-content h2 {
+	padding-top: 1em;
+	padding-bottom: 2em;
+}
+.main-content p {
+	padding-left: 1.2em;
+	padding-right: 1.2em;
+
+}
+
+/* =================================
+  MAIN CONTENT
+==================================== */
+
+.contact-info  {
+	display: flex;
+	padding-top: 4em;
+	text-align: center;
+	flex-flow: column;
+}
+.contact-info h3 {
+	flex-direction: column;
+	font-size: 17px;
+
+}
+.contact-info p {
+	font-size: 18px;
+	padding-left: 1em;
+	padding-right: 1em;
+}
+.contact-info li{
+display: inline-block;
+}
+.value {
+margin-left: 0.6em;
+letter-spacing: 0.025em
+}
+
+/* =================================
+FOOTER
+==================================== */
+
+.my-name-footer {
+	border-top: 1px solid #d0d0d0;
+	margin-left: 1em;
+	margin-right: 1em;
+	display:flex;
+	justify-content: space-between;
+
+}
+
+
+/* ---- Float clearfix ---- */
+
+.clearfix::after {
+	content: " ";
+	display: table;
+	clear: both;
 }
